Mon Nov  6 14:24:34 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vers_ts.c: Remove ctime define.  It is just asking for trouble.

Mon Nov  6 11:58:26 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * vers_ts.c: ifdef ctime, undef it before redefining it.  It is a
        macro on some systems.

        * lock.c: don't prototype ctime() here.  (See note below about
        fgetentent() in entries.c.)

Sun Nov  5 16:06:01 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * entries.c (fgetentent): don't prototype ctime here; we include
        cvs.h, which includes system.h, which includes <time.h>
        unconditionally (either as <time.h> or <sys/time.h>).  Anyway, IBM
        C/C++ chokes on mid-function, or even mid-file, prototypes.  Sigh.

Thu Nov  2 21:51:04 1995  Dan Wilder  <dan@gasboy.com>

	* rtag.c (rtag): Fix typo ("-T" -> "-F").

Tue Oct 31 19:09:11 1995  Dan Wilder <dan@gasboy.com>

        * diff.c (diff_dirproc): just return R_SKIP_ALL if dir not exist.
        (diff_file_nodiff): don't complain if file doesn't exist, just
        ignore.

Tue Oct 31 09:25:10 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* sanity.sh: Use absolute pathname for mkmodules.

Sat Oct 28 01:01:41 1995  Jim Meyering  (meyering@comco.com)

	* entries.c (ParseTag): Use getline instead of fgets.

Fri Oct 27 13:44:20 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * cvs.h: do nothing about alloca ifdef ALLOCA_IN_STDLIB.  I am
        rather suspicious of this solution, and will not be surprised to
        find out that there's a Right Way to handle this situation ("this
        situation" being that OS/2 simply declares alloca in <stdlib.h>).
        Suggestions are welcome; see src/cvs.h and lib/system.h to see why
        I was getting a conflict in the first place.

Wed Oct 25 16:03:20 1995  J.T. Conklin  <jtc@slave.cygnus.com>

	* cvs.h (struct entnode): Add user field.
	* entries.c (fputentent): New function, write entries line.